--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
     @apply bg-black opacity-80 hover:opacity-100 text-white rounded p-2;
   }
   h1 {
-    @apply text-5xl font-extrabold dark:text-white mb-14;
+    @apply xl:text-5xl md:text-4xl text-3xl  font-extrabold dark:text-white mb-14;
   }
   h2 {
     @apply text-4xl font-bold dark:text-white;
@@ -24,7 +24,7 @@
   p {
     @apply text-ellipsis overflow-hidden mb-3 text-gray-500 dark:text-gray-400 text-lg;
   }
-  span {
+  span.menuItem {
     @apply rounded-lg  text-lg px-3 py-2 text-slate-700 font-medium hover:bg-slate-100 hover:text-slate-900;
   }
 }
