--- a/app/globals.css
+++ b/app/globals.css
@@ -14,23 +14,23 @@
   }
 
   h2 {
-    @apply xl:text-4xl lg:text-3xl md:text-2xl text-lg font-bold dark:text-white mt-10;
+    @apply xl:text-4xl lg:text-3xl md:text-2xl text-lg font-bold dark:text-white mb-2;
   }
 
   h3 {
-    @apply xl:text-3xl lg:text-2xl md:text-xl text-lg font-bold dark:text-white mt-10;
+    @apply xl:text-3xl lg:text-2xl md:text-xl text-lg font-bold dark:text-white mb-2;
   }
 
   h4 {
-    @apply xl:text-2xl lg:text-xl md:text-lg text-lg font-bold dark:text-white mt-10;
+    @apply xl:text-2xl lg:text-xl md:text-lg text-lg font-bold dark:text-white mb-2;
   }
 
   h5 {
-    @apply xl:text-xl lg:text-lg md:text-lg text-lg font-bold dark:text-white mt-10;
+    @apply xl:text-xl lg:text-lg md:text-lg text-lg font-bold dark:text-white mb-2;
   }
 
   h6 {
-    @apply xl:text-lg lg:text-lg md:text-lg text-lg font-bold dark:text-white mt-10;
+    @apply xl:text-lg lg:text-lg md:text-lg text-lg font-bold dark:text-white mb-2;
   }
 
   p {
